# photo-terminal

./: .gitignore  AGENT.md  BUG_FIXES_SUMMARY.md  CACHE_IMPLEMENTATION.md  CONFIG_README.md  GHOSTTY_SUPPORT_ADDED.md  GRAPHICS_PROTOCOL_ANALYSIS.md  HD_PREVIEW_IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.md  INTEGRATION_GUIDE.md  LAYOUT_FIX_SUMMARY.md  LICENSE  PROCESSING_CONFIG_UI.md  README.md  SPEC.md  TASK_17_SUMMARY.md  TUI_IMPLEMENTATION.md  UX_IMPROVEMENTS_SUMMARY.md  bug-fixes.md  debug_viu.py  dry_run.py  example_complete.py  example_dry_run.py  example_duplicate_checker.py  example_optimizer.py  example_processor.py  example_uploader.py  example_usage.py  hd-preview-feature.md  optimizer.py  photo_upload.py  processor.py  pyproject.toml  requirements.txt  summary.py  test_cache_simple.py  test_config.py  test_confirmation.py  test_dry_run.py  test_duplicate_checker.py  (+15 more)
docs/: CLI_IMPLEMENTATION.md  DUPLICATE_CHECKER_QUICKREF.md  DUPLICATE_CHECKER_README.md  DUPLICATE_CHECKER_SUMMARY.md  OPTIMIZER_README.md  OPTIMIZER_SUMMARY.md  UPLOADER_IMPLEMENTATION.md  UPLOADER_README.md
examples/: example_complete.py  example_dry_run.py  example_duplicate_checker.py  example_optimizer.py  example_processor.py  example_uploader.py  example_usage.py
photo_terminal/: __init__.py  __main__.py  config.py  confirmation.py  dry_run.py  duplicate_checker.py  processor.py  s3_browser.py  scanner.py  summary.py  tui.py  tui_debug.py  uploader.py
tests/: __init__.py  test_config.py  test_confirmation.py  test_dry_run.py  test_duplicate_checker.py  test_integration.py  (+10 more)
